# tos-compliance-agent

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: README.md  list.txt  make_voiceover.py  render_slides.py
deploy/: Dockerfile  README.md
deploy/terraform/: main.tf  outputs.tf  variables.tf
docs/superpowers/plans/: 2026-05-28-tier0-license-python-skeleton.md
docs/superpowers/specs/: 2026-05-28-tos-compliance-agent-design.md
examples/sources/: apache-2.0-excerpt.txt  example-dpa.txt  internal-data-policy.txt  sources.json
packs/: ai-aup-core.json  api-tos-core.json  license-core.json  privacy-core.json
src/compliance_agent/: cli.py  config.py  drift.py  engine.py  errors.py  judge.py  mcp_server.py  models.py  notices.py  packs.py  predicates.py  refresh.py  remediation.py  report.py  safety.py
src/compliance_agent/agent/: __init__.py  agent.py  root.py
src/compliance_agent/analyzers/: __init__.py  gpl_incompatibility.py  missing_notice.py  pii_in_logs.py
src/compliance_agent/compiler/: __init__.py  core.py  genai_client.py  prompts.py  schema.py
tests/: test_agent.py  test_analyzers.py  test_cli.py  test_cli_tier1.py  test_code_ast.py  test_compiler.py  test_drift.py  test_end_to_end.py  test_engine.py  test_engine_judge.py  test_extract.py  test_licenses.py  test_mcp_server.py  test_models.py  test_node.py  test_notices.py  test_packs.py  test_platforms.py  test_predicates.py  test_pyproject.py  test_refresh.py  test_remediation.py  test_report.py  test_safety.py  test_sources.py
(+11 files in other folders)
