[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compliance-agent"
version = "0.1.0"
description = "Self-installable ToS/Compliance drift agent (Tier-0: OSS license, Python)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "ToS/Compliance Agent contributors" }]
keywords = ["compliance", "license", "sbom", "mcp", "vertex-ai", "gemini", "agent"]
dependencies = [
    "pydantic>=2.6",
    "fastmcp>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
# Ingest B2B contracts / policies distributed as PDF (MSAs, DPAs, SOWs).
pdf = ["pypdf>=4.0"]
# Tier-1 hosted/agent stack (the user installs this into their OWN GCP project).
gcp = [
    "google-genai>=1.0",
    "google-adk>=1.0",
    "google-cloud-aiplatform>=1.70",
    "google-cloud-storage>=2.18",
    "google-cloud-firestore>=2.16",
]

[project.urls]
Homepage = "https://github.com/CarrotGamesStudios/tos-compliance-agent"
Repository = "https://github.com/CarrotGamesStudios/tos-compliance-agent"

[project.scripts]
compliance-agent = "compliance_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/compliance_agent"]

[tool.hatch.build.targets.wheel.force-include]
"packs" = "compliance_agent/_bundled_packs"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
